--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <script>
 let productsDataList = [
-  {name:'iPhone 7 Plus', basePrice:3750, battery:'90%', colors:['Black','Silver'], storages:[{size:'128GB',price:3750}], images:['i7PLUS.png']},
+  {name:'iPhone 7 Plus', basePrice:3750, battery:'90%', colors:['Black','Silver'], storages:[{size:'128GB',price:3750}], images:['i7.png']},
   {name:'iPhone 8 Plus', basePrice:3850, battery:'91%', colors:['Black','Silver','Gold'], storages:[{size:'64GB',price:3850}], images:['i8.png']},
   {name:'iPhone XR', basePrice:4150, battery:'92%', colors:['Red','Blue','Black'], storages:[{size:'64GB',price:4150},{size:'128GB',price:4500}], images:['XR.png','IMG_XR128.png']},
   {name:'iPhone 11', basePrice:6500, battery:'94%', colors:['Purple','Yellow','Black'], storages:[{size:'64GB',price:6500}], images:['11.png']},
