--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 
 <script>
 let productsDataList = [
-  {name:'iPhone 7 Plus', basePrice:3750, battery:'90%', colors:['Black','Silver'], storages:[{size:'128GB',price:3750}], images:['i7.png']},
-  {name:'iPhone 8 Plus', basePrice:3850, battery:'91%', colors:['Black','Silver','Gold'], storages:[{size:'64GB',price:3850}], images:['i8.png']},
-  {name:'iPhone XR', basePrice:4150, battery:'92%', colors:['Red','Blue','Black'], storages:[{size:'64GB',price:4150},{size:'128GB',price:4500}], images:['XR.png','IMG_XR128.png']},
-  {name:'iPhone 11', basePrice:6500, battery:'94%', colors:['Purple','Yellow','Black'], storages:[{size:'64GB',price:6500}], images:['11.png']},
-  {name:'iPhone 12', basePrice:7500, battery:'90%', colors:['Blue','Black'], storages:[{size:'64GB',price:7500}], images:['12.png']},
-  {name:'iPhone 13 Pro', basePrice:11800, battery:'92%', colors:['Silver','Graphite'], storages:[{size:'128GB',price:11800}], images:['13.png']},
-  {name:'iPhone 14', basePrice:12800, battery:'95%', colors:['Blue','Midnight','Starlight'], storages:[{size:'128GB',price:12800}], images:['14.png']},
+  {name:'iPhone 7 Plus', basePrice:3750, battery:'90%', colors:['Black','Silver'], storages:[{size:'128GB',price:3750}], images:['i7.jpeg']},
+  {name:'iPhone 8 Plus', basePrice:3850, battery:'91%', colors:['Black','Silver','Gold'], storages:[{size:'64GB',price:3850}], images:['i8.jpeg']},
+  {name:'iPhone XR', basePrice:4150, battery:'92%', colors:['Red','Blue','Black'], storages:[{size:'64GB',price:4150},{size:'128GB',price:4500}], images:['XR.jpeg','IMG_XR128.png']},
+  {name:'iPhone 11', basePrice:6500, battery:'94%', colors:['Purple','Yellow','Black'], storages:[{size:'64GB',price:6500}], images:['11.jpeg']},
+  {name:'iPhone 12', basePrice:7500, battery:'90%', colors:['Blue','Black'], storages:[{size:'64GB',price:7500}], images:['12.jpeg']},
+  {name:'iPhone 13 Pro', basePrice:11800, battery:'92%', colors:['Silver','Graphite'], storages:[{size:'128GB',price:11800}], images:['13.jpeg']},
+  {name:'iPhone 14', basePrice:12800, battery:'95%', colors:['Blue','Midnight','Starlight'], storages:[{size:'128GB',price:12800}], images:['14.jpeg']},
   {name:'iPhone 15', basePrice:15850, battery:'96%', colors:['Black','Silver'], storages:[{size:'128GB',price:15850}], images:['IMG_1209.jpeg']}
 ];
 
@@ -167,7 +167,7 @@ function updateModalPrice(){
 }
 
 function closeModal(){document.getElementById('productModal').style.display='none';}
-function addModalToCart(){
+function addModalToCart(){in
   const color=document.getElementById('modalColor').value;
   const storage=document.getElementById('modalStorage').value;
   const quantity=parseInt(document.getElementById('modalQuantity').value);
