--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 let productsDataList = [
   {name:'iPhone 7 Plus', basePrice:3750, battery:'90%', colors:['Black','Silver'], storages:[{size:'128GB',price:3750}], images:['7.jpg']},
   {name:'iPhone 8 Plus', basePrice:3850, battery:'91%', colors:['Black','Silver','Gold'], storages:[{size:'64GB',price:3850}], images:['8.jpg']},
-  {name:'iPhone XR', basePrice:4150, battery:'92%', colors:['Red','Blue','Black'], storages:[{size:'64GB',price:4150},{size:'128GB',price:4500}], images:['XR.jpg','IMG_XR128.png']},
+  {name:'iPhone XR', basePrice:4150, battery:'92%', colors:['Red','Blue','Black'], storages:[{size:'64GB',price:4150},{size:'128GB',price:4500}], images:['XR.jpeg','IMG_XR128.png']},
   {name:'iPhone 11', basePrice:6500, battery:'94%', colors:['Purple','Yellow','Black'], storages:[{size:'64GB',price:6500}], images:['11.jpg']},
   {name:'iPhone 12', basePrice:7500, battery:'90%', colors:['Blue','Black'], storages:[{size:'64GB',price:7500}], images:['12.jpg']},
   {name:'iPhone 13 Pro', basePrice:11800, battery:'92%', colors:['Silver','Graphite'], storages:[{size:'128GB',price:11800}], images:['13.jpg']},
